frontend/tests/cases/positive/interface-simple-21.gr
interface Simple a where
  simple : a -> a

data A = A | B

-- instance with pattern matching
instance Simple A where
  simple A = A;
  simple B = B
