frontend/tests/cases/negative/interfaces/scope/notInScopeMethodNotProvidedByInterfaceInInstance.gr
interface Simple a

data A = A'

-- 'simple' is not a member
-- of the 'Simple' interface
instance Simple A where
  simple = A'
